--- a/angular.json
+++ b/angular.json
@@ -46,7 +46,7 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss"
+              "src/theme/styles.scss"
             ],
             "scripts": []
           },
